--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  min-height: 100vh;
+  background-image: url("./assets/images/background.jpg");
+  background-size: cover;
+  overflow-x: hidden;
 }
 
 code {
