--- a/src/pages/contact/style.scss
+++ b/src/pages/contact/style.scss
@@ -20,4 +20,17 @@
     justify-content: center;
     flex-wrap: wrap;
   }
+  .social {
+    width: 100%;
+
+    .icon-button {
+      color: #e5e5e5;
+      opacity: 0.6;
+
+      .icon {
+        width: 20px;
+        height: 20px;
+      }
+    }
+  }
 }
