--- a/src/pages/contact/style.scss
+++ b/src/pages/contact/style.scss
@@ -1,11 +1,12 @@
 .contact-page {
-  min-height: 80vh;
+  min-height: 88vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: #e5e5e5;
+  flex: 1;
 
   h1 {
     padding: 10px;
