:lipstick: improve styles

--- a/src/pages/about/style.scss
+++ b/src/pages/about/style.scss
@@ -16,7 +16,12 @@
     text-align: center;
     p {
       width: 60%;
-      margin: 0 auto;
+      margin: 20px auto;
+      line-height: 150%;
+    }
+    a {
+      color: #fca311;
+      text-decoration: none;
     }
   }
   .interests {
