--- a/src/components/project-view-card/style.scss
+++ b/src/components/project-view-card/style.scss
@@ -1,15 +1,28 @@
 .project-card {
-  width: 340px;
-  color: #000;
+  width: 450px;
+  height: 300px;
+  color: #e5e5e5;
   margin: 20px;
-  background-color: #fff;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
 
-  img {
-    aspect-ratio: 16/9;
-    width: 100%;
+  &:hover {
+    .description-bar {
+      bottom: 0;
+    }
   }
+
   .description-bar {
-    padding: 20px;
+    padding: 10px 20px;
+    background-color: #707070c2;
+    position: absolute;
+    bottom: -160px;
+    transition: 0.4s ease-in-out;
+    width: 100%;
 
     h3 {
       margin: 10px 0;
