--- a/src/index.scss
+++ b/src/index.scss
@@ -11,12 +11,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   min-height: 100vh;
+  font-size: larger;
   background-image: url("./assets/images/background.jpg");
   background-size: cover;
   overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
 }
