--- a/src/components/contact-card/style.scss
+++ b/src/components/contact-card/style.scss
@@ -1,21 +1,21 @@
 .contact-card {
-  min-width: 260px;
-  max-width: 260px;
   border: 1px solid #e5e5e5;
   background: rgba(125, 125, 125, 0.4);
   border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding: 16px;
-  margin: 10px 20px;
+  padding: 20px;
+  margin: 10px;
   color: #e5e5e5;
   cursor: pointer;
+  height: 100px;
+  width: 300px;
 
   .card-icon {
     margin-inline-end: 20px;
     background-color: rgba(18, 26, 18, 0.933);
-    padding: 20px;
+    padding: 14px;
     display: flex;
     align-items: center;
     justify-content: center;
