--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,7 +1,7 @@
 .desktop-header {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
 
   .tabs {
