--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -9,15 +9,17 @@
     border-bottom: 2px solid rgba(255, 255, 255, 0.2);
     padding: 10px 0;
     width: 80%;
-    text-align: left;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
   }
   .family {
     color: #fca311;
+    padding-inline-start: 14px;
   }
   .description {
     color: #e5e5e5;
     margin: 30px 0;
-    text-align: left;
     width: 70%;
     opacity: 0.8;
   }
