:lipstick: fix switch language styles

--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -23,3 +23,15 @@
 .MuiDrawer-paperAnchorLeft {
   min-width: 220px;
 }
+.mobile-header-switch-language {
+  display: flex;
+  align-items: center;
+  padding-inline-start: 20px;
+
+  .language {
+    padding-inline-end: 10px;
+  }
+  .css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input.css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input.css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input {
+    padding: 4px 8px;
+  }
+}
