--- a/src/pages/resume/style.scss
+++ b/src/pages/resume/style.scss
@@ -7,7 +7,8 @@
   margin-inline-start: 50px;
 
   @media screen and (max-width: 500px) {
-    flex-direction: column;
+    flex-direction: column-reverse;
+    margin-inline-start: 0;
 
     p,
     .title,
