--- a/src/components/interest-card/style.scss
+++ b/src/components/interest-card/style.scss
@@ -5,8 +5,18 @@
   justify-content: center;
   max-width: 200px;
   margin: 10px;
+  cursor: pointer;
+  min-height: 70px;
+
+  &:hover {
+    opacity: 0.8;
+    .card-title {
+      margin-top: 10px;
+    }
+  }
 
   .card-title {
     text-align: center;
+    transition: all 0.3s ease-in-out;
   }
 }
