--- a/src/pages/contact/style.scss
+++ b/src/pages/contact/style.scss
@@ -35,7 +35,6 @@
     }
   }
   .social-card {
-    height: 200px;
     border: 1px solid #e5e5e5;
     background: rgba(125, 125, 125, 0.4);
     border-radius: 8px;
@@ -46,21 +45,27 @@
     margin: 10px;
     color: #e5e5e5;
     cursor: pointer;
+    height: 200px;
     width: 300px;
+    &:hover {
+      .card-icon svg {
+        transform: scale(3);
+        opacity: 0.7;
+      }
+    }
 
     .card-icon {
       margin-inline-end: 20px;
-      background-color: rgba(18, 26, 18, 0.933);
+      background-color: rgba(0, 0, 0, 0.637);
       padding: 14px;
       display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 50%;
       color: #fca311;
-      position: relative;
-    }
-    .icon svg {
-      position: absolute;
+      svg {
+        transition: all 0.3s ease-in-out;
+      }
     }
   }
 }
