--- a/src/components/project-view-card/style.scss
+++ b/src/components/project-view-card/style.scss
@@ -1,5 +1,5 @@
 .project-card {
-  width: 450px;
+  width: 300px;
   height: 300px;
   color: #e5e5e5;
   margin: 20px;
@@ -30,6 +30,7 @@
 
     p {
       margin: 10px 0;
+      max-width: 500px;
     }
 
     a {
