--- a/src/pages/portfolio/style.scss
+++ b/src/pages/portfolio/style.scss
@@ -2,18 +2,54 @@
   color: #e5e5e5;
   flex: 1;
 
+  .swiper {
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+
+    .swiper-slide {
+      background-position: center;
+      background-size: cover;
+      width: 300px;
+      height: 300px;
+    }
+
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+    }
+  }
+
   h1 {
     text-align: center;
     margin: 20px;
   }
 
   .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    .more-projects {
+      transition: 0.3s ease-in-out;
+      width: 100%;
+    }
+
+    .show {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+    }
   }
-  .learn-more-button {
+
+  .button-container {
     text-align: center;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    button,
+    a {
+      width: 150px;
+    }
   }
 }
