--- a/src/pages/portfolio/style.scss
+++ b/src/pages/portfolio/style.scss
@@ -19,6 +19,11 @@
       display: block;
       width: 100%;
     }
+
+
+    .swiper-pagination-bullet {
+      background-color: #fca311;
+    }
   }
 
   h1 {
