--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -1,21 +1,31 @@
 .home-page {
-  .name {
-    color: #e5e5e5;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
-    padding: 10px 0;
-    width: 80%;
+  .content {
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
-  }
-  .family {
-    color: #fca311;
-    padding-inline-start: 14px;
-  }
-  .description {
-    color: #e5e5e5;
-    margin: 30px 0;
-    width: 70%;
-    opacity: 0.8;
+    justify-content: center;
+    flex-direction: column;
+    flex: 1;
+    height: 100%;
+
+    .name {
+      color: #e5e5e5;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+      padding: 10px 0;
+      width: 80%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+    }
+
+    .family {
+      color: #fca311;
+      padding-inline-start: 14px;
+    }
+
+    .description {
+      color: #e5e5e5;
+      margin: 30px 0;
+      width: 70%;
+      opacity: 0.8;
+    }
   }
 }
