--- a/src/pages/portfolio/style.scss
+++ b/src/pages/portfolio/style.scss
@@ -46,16 +46,7 @@
     }
   }
 
-  .button-container {
-    text-align: center;
+  .button {
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    button,
-    a {
-      width: 150px;
-    }
   }
 }
