fix background problem

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,5 +20,8 @@ body {
   font-size: larger;
   background-image: url("./assets/images/background.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
   overflow-x: hidden;
 }
