--- a/src/components/project-view-card/style.scss
+++ b/src/components/project-view-card/style.scss
@@ -1,9 +1,10 @@
 .project-card {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   color: #e5e5e5;
   margin: 20px;
   position: relative;
+  border-radius: 18px;
   cursor: pointer;
   overflow: hidden;
 
