update personal info

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,12 +7,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "shabnam", "Andika", sans-serif !important;
   user-select: none;
 }
 
 body {
   margin: 0;
-  font-family: "shabnam", "Andika", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
